--- a/net-analyzer/wireshark/files/release-notes.html
+++ b/net-analyzer/wireshark/files/release-notes.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://www.wireshark.org/docs/relnotes/wireshark-#VERSION#.html'" />
+    <meta http-equiv="refresh" content="0; url='https://www.wireshark.org/docs/relnotes/#VERSION#'" />
   </head>
 </html>
